# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/common/: logic.py  utils.py
brain_games/game_utilities/: game_core.py  games_functional.py  utils.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_nod.py  brain_prime.py  brain_prog.py  brain_progression.py
